# killjoy

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/actions/prepare-rust/: action.yml
.github/workflows/: ci.yml  release.yml
package/: README.md  settings.json
package/session/: killjoy.service
scripts/: README.md  README.txt  gen-code.sh  install-settings.sh  settings.json  travis-checks.sh
src/: bus.rs  cli.rs  error.rs  lib.rs  main.rs  settings.rs  timestamp.rs  unit.rs  utils.rs
tests/: cli.rs
