# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Jeremy Audet <jerebear@protonmail.com>"]
categories = ["command-line-utilities"]
description = "Monitor systemd units."
edition = "2018"
keywords = ["d-bus", "dbus", "systemd", "unit"]
license = "GPL-3.0-or-later"
name = "killjoy"
readme = "README.md"
repository = "https://github.com/kennep/killjoy"
homepage = "https://github.com/Ichimonji10/killjoy"
version = "0.2.0"

[dependencies]
clap   =  "^2.33.0"
dbus   =  "^0.6.5"
regex  =  "^1.2.0"
serde = { version = "^1.0.98", features = ["derive"] }
serde_json  =  "^1.0.40"
textwrap    =  "^0.11.0"
xdg         =  "^2.2.0"

[dev-dependencies]
assert_cmd  =  "^0.11.0"
tempfile    =  "^3.1.0"

[badges]
travis-ci = {repository = "Ichimonji10/killjoy"}

[package.metadata.deb]
maintainer = "Kenneth Wang Pedersen <kenneth@wangpedersen.com>"
extended-description = """
Generate slack notifications on behalf of killjoy.

killjoy is a systemd unit monitoring application. It discovers systemd units and
tracks their states. When a unit changes to a state of interest, killjoy
contacts notifiers.
"""
maintainer-scripts = "package/session"
assets = [
    ["target/release/killjoy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/killjoy/", "644"],
    ["package/settings.json", "/etc/xdg/killjoy/", "644"]
]
conf-files = [
    "/etc/xdg/killjoy/settings.json"
]

[package.metadata.deb.systemd-units]
start = true
enable = true

